<resources>
    <string name="app_name">Xatruch POS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_caja">Caja</string>
    <string name="menu_cocina">Cocina</string>
    <string name="menu_inventario">Inventario</string>
    <string name="menu_reportes">Reportes</string>
    <string name="menu_menu">Menú</string>
    <string name="menu_settings">Ajustes</string>

    <string name="title_caja">Caja Registradora</string>
    <string name="title_cocina">Órdenes de Cocina</string>
    <string name="title_inventario">Gestión de Inventario</string>
    <string name="title_reportes">Reportes de Ventas</string>
    <string name="title_menu">Gestión de Menú</string>

    <string name="label_nombre">Nombre del Producto</string>
    <string name="label_precio">Precio</string>
    <string name="label_tipo">Tipo</string>
    <string name="tipo_platillo">Platillo</string>
    <string name="tipo_bebida">Bebida</string>
    <string name="btn_guardar">Guardar</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="desc_increase">Aumentar cantidad</string>
    <string name="desc_decrease">Disminuir cantidad</string>
    <string name="desc_delete">Eliminar item</string>
    <string name="delete_confirmation_title">Confirmar eliminación</string>
    <string name="delete_confirmation_msg">¿Estás seguro de que deseas eliminar este elemento? Esta acción no se puede deshacer.</string>
    <string name="btn_eliminar">Eliminar</string>
    <string name="add_item">Agregar item</string>
    <string name="label_unidad">Unidad (ej. pza, kg)</string>
    <string name="label_cantidad">Cantidad inicial</string>
    <string name="label_stock_min">Stock mínimo</string>
    <string name="error_empty_fields">Por favor complete todos los campos</string>
</resources>