<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_caja">

    <fragment
        android:id="@+id/nav_caja"
        android:name="com.xatruch.pos.ui.caja.CajaFragment"
        android:label="@string/title_caja"
        tools:layout="@layout/fragment_caja" />

    <fragment
        android:id="@+id/nav_cocina"
        android:name="com.xatruch.pos.ui.cocina.CocinaFragment"
        android:label="@string/title_cocina"
        tools:layout="@layout/fragment_cocina" />

    <fragment
        android:id="@+id/nav_inventario"
        android:name="com.xatruch.pos.ui.inventario.InventarioFragment"
        android:label="@string/title_inventario"
        tools:layout="@layout/fragment_inventario" />

    <fragment
        android:id="@+id/nav_reportes"
        android:name="com.xatruch.pos.ui.reportes.ReportesFragment"
        android:label="@string/title_reportes"
        tools:layout="@layout/fragment_reportes" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.xatruch.pos.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.xatruch.pos.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>